<resources>
    <string name="app_name">kai-content</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_feedbacks">Feedback</string>

    <string name="menu_home">Home</string>
    <string name="fragment_show_content">Show Content</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_complaint">Complaint</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_editProfile">Edit Profile</string>

    <string name="menu_complaint_operator">Complaint</string>
    <string name="menu_content_operator">Content</string>
    <string name="menu_edit_content_operator">Content</string>

    <string name="login_title">Welcome Back</string>
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="register_account_text">Don`t have an account? Register</string>
    <string name="app_logo_description">App Logo</string>

    <string-array name="content_status_options">
        <item>pending</item>
        <item>published</item>
        <item>rejected</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="edit_content">Edit Content</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="status">Status</string>
    <string name="select_video_file">Select the File Video</string>
    <string name="no_file_selected">No File Selected</string>
    <string name="select_thumbnail">Select Thumbnail</string>
    <string name="no_thumbnail_selected">No Thumnail selected</string>
    <string name="update_content">Update Content</string>
    <string name="current_thumbnail">Current Thumbnail</string>
    <string name="thumbnail_preview">Thumnail preview</string>
    <string name="remove_from_favorites">Remove from Favorites</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="fragment_review_content">Review Content</string>
</resources>
