<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_home2"
            android:icon="@drawable/ic_menu_camera"
            android:title="Stream" />
        <item
            android:id="@+id/nav_complaint"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_complaint" />
        <item
            android:id="@+id/nav_complaint_operator"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_complaint" />
        <item
            android:id="@+id/nav_content_operator"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_content_operator" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_favorite" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_profile" />
    </group>
</menu>
